# Astrology-IIm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-gpu.txt  requirements-local.txt  run_pipeline.py  streamlit_app.py  verify_output.py
configs/: dataset.yaml  model.yaml  training.yaml
data/raw/: chat_data.json
data/synthetic/: 001_career_education.json  002_marriage_relationship.json  003_health_remedies.json  004_business_finance.json  005_student_education.json  generate_conversations.py  synthetic_dataset.json
deployment/: Dockerfile.api  Dockerfile.training  astrology-api.service  nginx.conf  setup_vps.sh
docs/: api.md  deployment.md  model_selection.md  vllm_serving.md
scripts/: download_model.py  train_colab.ipynb  train_docker.sh  train_linux.sh  train_windows.ps1
src/api/: __init__.py  schemas.py  server.py
src/data_pipeline/: __init__.py  cleaner.py  deduplicator.py  formatter.py  splitter.py  validator.py
src/evaluation/: __init__.py  benchmark.py  hallucination.py  metrics.py  run_evaluation.py
src/inference/: __init__.py  chat.py  engine.py  interactive_chat.py
src/training/: __init__.py  callbacks.py  config.py  dataset.py  merge.py  train.py
tests/: conftest.py  test_data_pipeline.py  test_inference.py
