[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrology-llm"
version = "0.1.0"
description = "Fine-tuned Qwen2.5 astrologer chatbot"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
